--- a/client/index.html
+++ b/client/index.html
@@ -5,16 +5,14 @@
   <body>
     <h1>League Guru</h1>
     <p>Create and manage sports leagues with teams, scores, and schedules.</p>
-    <p><button>Get Started</button></p>
-    <p>
-      <h2>Features</h2>
-      <ul>
-        <li>Create leagues</li>
-        <li>Add players and/or teams</li>
-        <li>Keep track of scores</li>
-        <li>Manage scheduling</li>
-        <li><a href="learn-more">Learn more</a></li>
-      </ul>
-    </p>
+    <p><a href="leagues/new">Get Started</a></p>
+    <h2>Features</h2>
+    <ul>
+      <li>Create leagues</li>
+      <li>Add players and/or teams</li>
+      <li>Keep track of scores</li>
+      <li>Manage scheduling</li>
+      <li><a href="learn-more">Learn more</a></li>
+    </ul>
   </body>
 </html>
