--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,11 @@
   <body>
     <h1>League Guru</h1>
     <p>Create and manage sports leagues with teams, scores, and schedules.</p>
-    <p><a href="leagues/new">Get Started</a></p>
+    <p>
+      <a href="leagues/new.html">Create a league</a>
+      |
+      <a href="leagues/index.html">View existing leagues</a>
+    </p>
     <h2>Features</h2>
     <ul>
       <li>Create leagues</li>
@@ -14,5 +18,6 @@
       <li>Manage scheduling</li>
       <li><a href="learn-more">Learn more</a></li>
     </ul>
+    <script src="script.js"></script>
   </body>
 </html>
