--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <p>
       <a href="leagues/new.html">Create a league</a>
       |
-      <a href="leagues/index.html">View existing leagues</a>
+      <a href="leagues/index.html">View your existing leagues</a>
     </p>
     <h2>Features</h2>
     <ul>
