--- a/client/leagues/index.html
+++ b/client/leagues/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>League Guru</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <h1><a href="../index.html">League Guru</a></h1>
