--- a/client/leagues/new.html
+++ b/client/leagues/new.html
@@ -8,7 +8,8 @@
     <h2>Create a league</h2>
     <form action="leagues" method="POST">
       <label for="name">Name your league</label>
-      <input id="name" name="name" placeholder="Tuesday Night Ramblers">
+      <input id="name" name="name" placeholder="Tuesday Night Ramblers"><br>
+      <input type="submit">
     </form>
     <script src="../script.js"></script>
   </body>
