only show view link if there are leagues

--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,10 @@
     <p>Create and manage sports leagues with teams, scores, and schedules.</p>
     <p>
       <a href="leagues/new.html">Create a league</a>
-      |
-      <a href="leagues/index.html">View your existing leagues</a>
+      <span class="view-your-leagues">
+        |
+        <a href="leagues/index.html">View your existing leagues</a>
+      </span>
     </p>
     <h2>Features</h2>
     <ul>
