add ability to delete players

--- a/client/leagues/show.html
+++ b/client/leagues/show.html
@@ -8,6 +8,8 @@
     <h2 class="current-league">Your League</h2>
     <button id="add-team-btn">Add Team</button>
     <button id="add-player-btn">Add Player</button>
+    <button id="del-player-btn">Remove Player</button>
+    <div class="message"></div>
     <div class="list-teams-or-players"></div>
     <script src="../script.js"></script>
   </body>
