add some live debugging

--- a/client/leagues/show.html
+++ b/client/leagues/show.html
@@ -10,6 +10,7 @@
     <button id="del-player-btn">Remove Player</button>
     <div class="message"></div>
     <div class="list-teams-or-players"></div>
+    <button id="raw-data-btn">View raw data</button>
     <script src="../script.js"></script>
   </body>
 </html>
